<resources>
    <string name="app_name">Lab2</string>
    <string name="button_text">Author</string>
    <string name="author_info">Grigoryev I.D., M091501(72)</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_kittens">Easter egg</string>
    <string name="menu_recall">Leave recall</string>
    <string name="rate_this_app">Rate this App!</string>
    <string name="leave_recall_text">Leave a recall if you want:</string>
    <string name="recall_editText">Your recall</string>
    <string name="button_rate">Rate!</string>
    <string name="button_closeRatingDialog">Close</string>
    <string name="toast_thanks">Thank you for your recall!</string>
    <string name="menu_applist">AppList</string>
    <string name="action_about">About</string>
    <string name="rate_progress_title">Sending rate</string>
    <string name="rate_progress_plsWait">Please wait...</string>
    <string name="menu_applist_copyName">Copy name</string>
    <string name="menu_applist_copyPacketName">Copy packet name</string>
    <string name="menu_applist_info">Application info</string>
    <string name="toast_copy_done">"Copied in clipboard: "</string>
    <string name="applist_search">Search</string>
    <string name="progress_text">Loading applications info...</string>


</resources>
