<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_author"
        android:orderInCategory="50"
        android:title="@string/button_text"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_egg"
        android:orderInCategory="200"
        android:title="@string/menu_kittens"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_recall"
        android:title="@string/menu_recall"
        android:orderInCategory="201" />
    <item
        android:id="@+id/menu_applist"
        android:title="@string/menu_applist"
        android:orderInCategory="202" />
</menu>